Implemented some sort of Session Handling

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ setup.md
 Pflichtenheft*
 UML/
 Styleguide/
+OldMig/
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio
