Bug fixes on session handling, work on login-gui

--- a/Forum/appsettings.json
+++ b/Forum/appsettings.json
@@ -9,5 +9,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DatabaseConnection": "server=localhost;user=root;password=toor;database=forum"
-    }
+    },
+    "Workfactor": 12
 }
