--- a/Forum/Forum.csproj
+++ b/Forum/Forum.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties wwwroot_4css_4bootstrap_4bootstrap_1min_1css_1map__JsonSchema="https://json.schemastore.org/specif-1.0.json" /></VisualStudio></ProjectExtensions>
 
 </Project>
