Using appsettings to configure the bcrypt workfactor in one place.

--- a/Forum/appsettings.json
+++ b/Forum/appsettings.json
@@ -10,5 +10,6 @@
     "ConnectionStrings": {
         "DatabaseConnection": "server=localhost;user=root;password=toor;database=forum"
     },
-    "Workfactor": 12
+    "Workfactor": 12,
+    "UploadPath": "C:\\tmp\\upload\\"
 }
