fix(search): code understanding and comments
Made clearer comments, to help explaining what the code actually is
doing.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ UML/
 Styleguide/
 OldMig/
 \!!!*
+*.ppt*
+ProgressBar.vba
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio
