fix: class name to match file name

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ OldMig/
 \!!!*
 *.ppt*
 ProgressBar.vba
+Prof/
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio
